tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_13.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((0 DIV 2) DIV z);
               q := (2 = (200 + y));
  (* error *)  y := 2;
               p := p;
               x := y;
               p := r;
               x := (2 MOD 0);
               y := 0;
               q := ((x < 2) & p);
               x := ((2 DIV (x - (y + 1))) - (+ z))
END Test13.